--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="account">账号</string>
     <string name="remeber_password">记住密码</string>
     <string name="login">登录</string>
+    <string name="register">注册</string>
     <string name="password">密码</string>
+    <string name="confirm_password">确认密码</string>
 </resources>
