--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="register">注册</string>
     <string name="password">密码</string>
     <string name="confirm_password">确认密码</string>
+    <string name="collect_list">收藏列表</string>
 </resources>
